Fix demo on latest JDK9